# AG-EVIDENCE

./: .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AG_EVIDENCE_CONTEXT_UPDATED.txt  AG_EVIDENCE_MASTER_HANDOFF.txt  CHANGELOG.md  CHATGPT_BRIEF_AG_EVIDENCE.txt  CLAUDE.md  CODEX.md  CONTEXTO_PARA_CHATGPT.md  CONTRIBUTING.md  CURRENT_STATE.md  LICENSE  PROBLEMA_READPDFX.md  README.md  ROADMAP.md  VALIDACION_OCR_WSL.md  __init__.py  ag-evidence.sh  buscar_sinad.py  buscar_sinad2.py  chat_asistente.py  chat_control_previo.py  chat_directiva.py  check_ocr_deps.py  demo_chat.py  ejecutar_control_previo.py  orquestador.py  pyproject.toml  pytest.ini  requirements.txt  test_real_ocr.py  ver_detalle.py
.claude/: settings.json
.cursor/: mcp.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-lint.yml
agentes/: __init__.py  agente_01_clasificador.py  agente_02_ocr.py  agente_03_coherencia.py  agente_04_legal.py  agente_05_firmas.py  agente_06_integridad.py  agente_07_penalidades.py  agente_08_sunat.py  agente_09_decisor.py  agente_10_conversacional.py  agente_directivas.py
config/: __init__.py  settings.py
data/: .gitkeep
data/directivas/: INVENTARIO_DIRECTIVAS.md
data/evaluacion/: expected_DIRI2026-INT-0196314.json  prueba_empirica_cc003.json
data/normativa/: ROADMAP_AMPLIACION_OS_OC.md  comprobantes_sunat.json  (+3 more)
docs/: ADR-010-ERL-evidence-reuse-layer.md  ADR-011-performance-pipeline.md  ADR-012.md  ADR-013-claude-code-sourcemap-reference.md  ADR.md  AGENT_GOVERNANCE_RULES.md  ARCHITECTURE.md  ARCHITECTURE_SNAPSHOT.md  ARCHITECTURE_VISUAL.md  ARQUITECTURA_MAYO.md  CI_TEST_TEMP.md  CODEX_CUSTOM_INSTRUCTIONS.md  CONTEXT_CHAIN.md  CONVENIOS_INTERINSTITUCIONALES.md  CURRENT_STATE.md  EVALUATION_FRAMEWORK.md  EXPERIMENTAL_SANDBOX.md  GLOSSARY.md  GOBERNANZA_TECNICA_TRANSVERSAL.md  GOVERNANCE_RULES.md  HARDWARE_CONTEXT.md  INFORME_TECNICO_VIATICOS_AI_PARA_AG_EVIDENCE.md  NEXT_STEP.md  OCR_FALLBACK_STRATEGY.md  OCR_SPEC.md  PARSING_COMPROBANTES_SPEC.md  PROJECT_SPEC.md  PROMPT_CONSULTA_IA_EXTERNA.md  PROTOCOL_SYNC.md  README_GOVERNANCE.md  REGLAS_VERIFICACION_COMPROBANTES.md  SESSION_LOG_2026-03-24.md  SUNAT_VALIDATION.md  VALIDACION_ANEXO3_VS_FACTURAS.md  criterios_administrativos_from_pautas.md  reglas_spot_y_tdr.md
governance/: SESSION_PROTOCOL.md  integrity_manifest.json
output/: informe_control_previo_20251215_162534.txt  informe_control_previo_20251215_163419.json  informe_control_previo_20251215_163419.txt  informe_control_previo_20251215_164045.json  informe_control_previo_20251215_164045.txt  informe_control_previo_20251215_165328.json  informe_control_previo_20251215_165328.txt  informe_control_previo_20251215_170107.json  informe_control_previo_20251215_170107.txt  informe_control_previo_20251215_172759.json  informe_control_previo_20251215_172759.txt  informe_control_previo_20251218_235002.json  informe_control_previo_20251218_235002.txt  informe_control_previo_20251219_000929.json  informe_control_previo_20251219_000929.txt  informe_control_previo_20251219_102003.json  informe_control_previo_20251219_102003.txt  informe_control_previo_20251219_172327.json  informe_control_previo_20251219_172327.txt  informe_control_previo_20251219_172327_ADMIN.txt
scripts/: README_CATEGORIZAR.md  _pack_contexto_ia.py  ag-evidence.sh  audit_repo_integrity.py  backup_local.py  benchmark_monkeyocr.py  benchmark_paddleocr_vl.py  benchmark_paddleocr_vl_docker.py  calibrar_umbrales.py  categorizar_expedientes.py  e2e_verify.py  explorar_expediente.py  extract_comprobantes_minedu.py  extraer_con_qwen_vl.py  extraer_expediente_diri.py  generar_excel_DEBEDSAR2026.py  generar_excel_DIRI2026.py  generar_excel_OPRE2026.py  generar_excel_OTIC2026.py  generar_excel_caja_chica_003.py  generar_excel_expediente.py  generar_excel_otic0072834.py  generar_paquete_auditoria.py  generar_paquete_codex.py  governance_guard.py  prueba_empirica_cc003.py  run_pipeline_diri.py  run_pipeline_test.py  setup_ollama.sh  tech_monitor.py  test_paddleocr_vl_torch.py
src/: __init__.py
tests/: README.md  conftest.py  run_quick_test.py  test_abstencion.py  test_agente_directivas.py  test_calibracion.py  test_chat_asistente.py  test_confidence_router.py  test_conflict_policy.py  test_custody_chain.py  test_detraccion_spot.py  test_enrutamiento_os_oc.py  test_escribano_fiel.py  test_estandar_probatorio.py  test_evidence_status.py  test_excel_writer.py  test_expediente_contract.py  test_field_validators.py  test_local_analyst.py  test_modo_conversacional.py  test_ocr_core.py  test_ocr_preprocessor.py  test_page_classifier.py  test_page_segmenter.py  test_pdf_text_extractor.py  test_qwen_fallback.py  test_reglas_viaticos.py  test_reporte_hallazgos.py  test_security.py  test_tdr_requirements.py  test_trace_logger.py  test_validador_expediente.py  test_vision.py  test_vlm_abstencion.py  test_vlm_integration.py
tools/: diagnose_ocr_expediente.py  ocr_smoke_test.py  run_gating_demo.py  run_local_expediente.py
utils/: __init__.py  exportador_json.py  llm_local.py  pdf_extractor.py  validador_evidencia.py
(+48 files in other folders)
